# go/api_health.go
@@ -1,0 +1,80 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * xiv-craftsmanship-api
+ *
+ * xiv-craftsmanship-api
+ *
+ * API version: 1.0.0
+ * Contact: hazuki3417@gmail.com
+ */
+
+package openapi
+
+import (
+	"errors"
+	"io"
+	"encoding/json"
+	"net/http"
+	"strings"
+)
+
+// HealthAPIController binds http requests to an api service and writes the service results to the http response
+type HealthAPIController struct {
+	service HealthAPIServicer
+	errorHandler ErrorHandler
+}
+
+// HealthAPIOption for how the controller is set up.
+type HealthAPIOption func(*HealthAPIController)
+
+// WithHealthAPIErrorHandler inject ErrorHandler into controller
+func WithHealthAPIErrorHandler(h ErrorHandler) HealthAPIOption {
+	return func(c *HealthAPIController) {
+		c.errorHandler = h
+	}
+}
+
+// NewHealthAPIController creates a default api controller
+func NewHealthAPIController(s HealthAPIServicer, opts ...HealthAPIOption) *HealthAPIController {
+	controller := &HealthAPIController{
+		service:      s,
+		errorHandler: DefaultErrorHandler,
+	}
+
+	for _, opt := range opts {
+		opt(controller)
+	}
+
+	return controller
+}
+
+// Routes returns all the api routes for the HealthAPIController
+func (c *HealthAPIController) Routes() Routes {
+	return Routes{
+		"GetHealth": Route{
+			strings.ToUpper("Get"),
+			"/health",
+			c.GetHealth,
+		},
+	}
+}
+
+// GetHealth - health
+func (c *HealthAPIController) GetHealth(w http.ResponseWriter, r *http.Request) {
+	bodyParam := map[string]interface{}{}
+	d := json.NewDecoder(r.Body)
+	d.DisallowUnknownFields()
+	if err := d.Decode(&bodyParam); err != nil && !errors.Is(err, io.EOF) {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	result, err := c.service.GetHealth(r.Context(), bodyParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, w)
+}
